a3/minicc/grammars/.antlr/MiniCParser.java
// Generated from /home/tangzhen/csc488/a3/minicc/grammars/MiniC.g4 by ANTLR 4.9.2

#include <vector>
#include "Program.h"
#include "Declarations.h"
#include "Statements.h"
#include "Exprs.h"
#include "Terms.h"
#include <iostream>

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiniCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, ID=36, INT=37, WS=38, COMMENT=39;
	public static final int
		RULE_prog = 0, RULE_preamble = 1, RULE_decl = 2, RULE_vardecl = 3, RULE_scope = 4, 
		RULE_stmt = 5, RULE_varlist = 6, RULE_varlistentry = 7, RULE_vartype = 8, 
		RULE_rettype = 9, RULE_parameters = 10, RULE_parameterlist = 11, RULE_parameterentry = 12, 
		RULE_expropt = 13, RULE_expr = 14, RULE_var = 15, RULE_arguments = 16, 
		RULE_argumentlist = 17, RULE_varname = 18, RULE_funcname = 19, RULE_parametername = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "preamble", "decl", "vardecl", "scope", "stmt", "varlist", "varlistentry", 
			"vartype", "rettype", "parameters", "parameterlist", "parameterentry", 
			"expropt", "expr", "var", "arguments", "argumentlist", "varname", "funcname", 
			"parametername"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'#include'", "'\"minicio.h\"'", "'('", "')'", "';'", "'{'", "'}'", 
			"'if'", "'else'", "'for'", "'while'", "'break'", "'return'", "','", "'['", 
			"']'", "'int'", "'bool'", "'void'", "'-'", "'*'", "'/'", "'+'", "'=='", 
			"'!='", "'<'", "'<='", "'>'", "'>='", "'!'", "'&&'", "'||'", "'='", "'true'", 
			"'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"ID", "INT", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public minicc::Program * val;
		public DeclContext decl;
		public TerminalNode EOF() { return getToken(MiniCParser.EOF, 0); }
		public PreambleContext preamble() {
			return getRuleContext(PreambleContext.class,0);
		}
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		 { ((ProgContext)_localctx).val =  new minicc::Program(); }

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(42);
				preamble();
				_localctx.val->setSyslibFlag(true);
				}
				break;
			case EOF:
			case T__16:
			case T__17:
			case T__18:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__16) | (1L << T__17) | (1L << T__18))) != 0)) {
				{
				{
				setState(48);
				((ProgContext)_localctx).decl = decl();
				_localctx.val->addChild(((ProgContext)_localctx).decl.dec); 
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreambleContext extends ParserRuleContext {
		public PreambleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preamble; }
	}

	public final PreambleContext preamble() throws RecognitionException {
		PreambleContext _localctx = new PreambleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_preamble);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__0);
			setState(59);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public minicc::Declaration * dec;
		public VardeclContext vardecl;
		public RettypeContext rettype;
		public FuncnameContext funcname;
		public ParametersContext parameters;
		public ScopeContext scope;
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public RettypeContext rettype() {
			return getRuleContext(RettypeContext.class,0);
		}
		public FuncnameContext funcname() {
			return getRuleContext(FuncnameContext.class,0);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decl);
		try {
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				((DeclContext)_localctx).vardecl = vardecl();
				((DeclContext)_localctx).dec =  ((DeclContext)_localctx).vardecl.vd;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				((DeclContext)_localctx).rettype = rettype();
				setState(65);
				((DeclContext)_localctx).funcname = funcname();
				setState(66);
				match(T__2);
				setState(67);
				((DeclContext)_localctx).parameters = parameters();
				setState(68);
				match(T__3);
				setState(69);
				((DeclContext)_localctx).scope = scope();

				        minicc::FuncDeclaration *fd = new minicc::FuncDeclaration();
				        fd->setHasBody(true);
				        fd->addChild(((DeclContext)_localctx).rettype.rt);
				        fd->addChild(((DeclContext)_localctx).funcname.fn);
				        for (std::vector<minicc::Parameter *>::iterator i = ((DeclContext)_localctx).parameters.params.begin(); i != ((DeclContext)_localctx).parameters.params.end(); i++) {
				            fd->addChild(*i);
				        }
				        fd->addChild(((DeclContext)_localctx).scope.sc);
				        ((DeclContext)_localctx).dec =  fd;
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				((DeclContext)_localctx).rettype = rettype();
				setState(73);
				((DeclContext)_localctx).funcname = funcname();
				setState(74);
				match(T__2);
				setState(75);
				((DeclContext)_localctx).parameters = parameters();
				setState(76);
				match(T__3);
				setState(77);
				match(T__4);

				        minicc::FuncDeclaration *fd = new minicc::FuncDeclaration();
				        fd->setHasBody(false);
				        fd->addChild(((DeclContext)_localctx).rettype.rt);
				        fd->addChild(((DeclContext)_localctx).funcname.fn);
				        for (std::vector<minicc::Parameter *>::iterator i = ((DeclContext)_localctx).parameters.params.begin(); i != ((DeclContext)_localctx).parameters.params.end(); i++) {
				            fd->addChild(*i);
				        }
				        ((DeclContext)_localctx).dec =  fd;
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclContext extends ParserRuleContext {
		public minicc::VarDeclaration * vd;
		public VartypeContext vartype;
		public VarlistContext varlist;
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public VardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl; }
	}

	public final VardeclContext vardecl() throws RecognitionException {
		VardeclContext _localctx = new VardeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vardecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			((VardeclContext)_localctx).vartype = vartype();
			setState(83);
			((VardeclContext)_localctx).varlist = varlist(0);
			setState(84);
			match(T__4);

			        ((VardeclContext)_localctx).vd =  new minicc::VarDeclaration();
			        _localctx.vd->addChild(((VardeclContext)_localctx).vartype.vt);
			        for (std::vector<minicc::VarReference *>::iterator i = ((VardeclContext)_localctx).varlist.vl.begin(); i != ((VardeclContext)_localctx).varlist.vl.end(); i++) {
			            _localctx.vd->addChild(*i);
			        }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScopeContext extends ParserRuleContext {
		public minicc::ScopeStatement * sc;
		public VardeclContext vardecl;
		public StmtContext stmt;
		public List<VardeclContext> vardecl() {
			return getRuleContexts(VardeclContext.class);
		}
		public VardeclContext vardecl(int i) {
			return getRuleContext(VardeclContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scope; }
	}

	public final ScopeContext scope() throws RecognitionException {
		ScopeContext _localctx = new ScopeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_scope);
		((ScopeContext)_localctx).sc =  new minicc::ScopeStatement();
		        size_t n = 0;
		        
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__5);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__16 || _la==T__17) {
				{
				{
				setState(88);
				((ScopeContext)_localctx).vardecl = vardecl();
				   _localctx.sc->addChild(((ScopeContext)_localctx).vardecl.vd);
				                    n += ((ScopeContext)_localctx).vardecl.vd->numVarReferences();
				                
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__5) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__19) | (1L << T__29) | (1L << T__33) | (1L << T__34) | (1L << ID) | (1L << INT))) != 0)) {
				{
				{
				setState(96);
				((ScopeContext)_localctx).stmt = stmt();
				_localctx.sc->addChild(((ScopeContext)_localctx).stmt.st);
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			match(T__6);
			_localctx.sc->setNumVarDecl(n);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public minicc::Statement * st;
		public ExprContext expr;
		public StmtContext stmt;
		public StmtContext s1;
		public StmtContext s2;
		public ExproptContext e1;
		public ExproptContext e2;
		public ExproptContext e3;
		public ScopeContext scope;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<ExproptContext> expropt() {
			return getRuleContexts(ExproptContext.class);
		}
		public ExproptContext expropt(int i) {
			return getRuleContext(ExproptContext.class,i);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stmt);
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				((StmtContext)_localctx).expr = expr(0);
				setState(108);
				match(T__4);
				  
				        ((StmtContext)_localctx).st =  new minicc::ExprStatement();
				        _localctx.st->addChild(((StmtContext)_localctx).expr.e);
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(T__7);
				setState(112);
				match(T__2);
				setState(113);
				((StmtContext)_localctx).expr = expr(0);
				setState(114);
				match(T__3);
				setState(115);
				((StmtContext)_localctx).stmt = stmt();
				  
				        ((StmtContext)_localctx).st =  new minicc::IfStatement();
				        _localctx.st->addChild(((StmtContext)_localctx).expr.e);
				        _localctx.st->addChild(((StmtContext)_localctx).stmt.st);
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				match(T__7);
				setState(119);
				match(T__2);
				setState(120);
				((StmtContext)_localctx).expr = expr(0);
				setState(121);
				match(T__3);
				setState(122);
				((StmtContext)_localctx).s1 = stmt();
				setState(123);
				match(T__8);
				setState(124);
				((StmtContext)_localctx).s2 = stmt();

				        ((StmtContext)_localctx).st =  new minicc::IfStatement();
				        _localctx.st->addChild(((StmtContext)_localctx).expr.e);
				        _localctx.st->addChild(((StmtContext)_localctx).s1.st);
				        _localctx.st->addChild(((StmtContext)_localctx).s2.st);
				    
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(127);
				match(T__9);
				setState(128);
				match(T__2);
				setState(129);
				((StmtContext)_localctx).e1 = expropt();
				setState(130);
				match(T__4);
				setState(131);
				((StmtContext)_localctx).e2 = expropt();
				setState(132);
				match(T__4);
				setState(133);
				((StmtContext)_localctx).e3 = expropt();
				setState(134);
				match(T__3);
				setState(135);
				((StmtContext)_localctx).stmt = stmt();

				        ((StmtContext)_localctx).st =  new minicc::ForStatement();
				        _localctx.st->addChild(((StmtContext)_localctx).e1.ep);
				        _localctx.st->addChild(((StmtContext)_localctx).e2.ep);
				        _localctx.st->addChild(((StmtContext)_localctx).e3.ep);
				        _localctx.st->addChild(((StmtContext)_localctx).stmt.st);
				    
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(138);
				match(T__10);
				setState(139);
				match(T__2);
				setState(140);
				((StmtContext)_localctx).expr = expr(0);
				setState(141);
				match(T__3);
				setState(142);
				((StmtContext)_localctx).stmt = stmt();

				        ((StmtContext)_localctx).st =  new minicc::WhileStatement();
				        _localctx.st->addChild(((StmtContext)_localctx).expr.e);
				        _localctx.st->addChild(((StmtContext)_localctx).stmt.st);
				    
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(145);
				match(T__11);
				setState(146);
				match(T__4);

				        ((StmtContext)_localctx).st =  new minicc::BreakStatement();
				    
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(148);
				match(T__12);
				setState(149);
				match(T__4);

				        ((StmtContext)_localctx).st =  new minicc::ReturnStatement();
				    
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(151);
				match(T__12);
				setState(152);
				((StmtContext)_localctx).expr = expr(0);
				setState(153);
				match(T__4);

				        ((StmtContext)_localctx).st =  new minicc::ReturnStatement();
				        _localctx.st->addChild(((StmtContext)_localctx).expr.e);
				    
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(156);
				((StmtContext)_localctx).scope = scope();

				        ((StmtContext)_localctx).st =  ((StmtContext)_localctx).scope.sc;
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarlistContext extends ParserRuleContext {
		public std::vector<minicc::VarReference *> vl;
		public VarlistContext v1;
		public VarlistentryContext varlistentry;
		public VarlistentryContext varlistentry() {
			return getRuleContext(VarlistentryContext.class,0);
		}
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public VarlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varlist; }
	}

	public final VarlistContext varlist() throws RecognitionException {
		return varlist(0);
	}

	private VarlistContext varlist(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		VarlistContext _localctx = new VarlistContext(_ctx, _parentState);
		VarlistContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_varlist, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(162);
			((VarlistContext)_localctx).varlistentry = varlistentry();
			std::vector<minicc::VarReference *> v; v.push_back(((VarlistContext)_localctx).varlistentry.vle); ((VarlistContext)_localctx).vl =  v;
			}
			_ctx.stop = _input.LT(-1);
			setState(172);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new VarlistContext(_parentctx, _parentState);
					_localctx.v1 = _prevctx;
					_localctx.v1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_varlist);
					setState(165);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(166);
					match(T__13);
					setState(167);
					((VarlistContext)_localctx).varlistentry = varlistentry();

					                  ((VarlistContext)_localctx).vl =  ((VarlistContext)_localctx).v1.vl;
					                  _localctx.vl.push_back(((VarlistContext)_localctx).varlistentry.vle);
					              
					}
					} 
				}
				setState(174);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class VarlistentryContext extends ParserRuleContext {
		public minicc::VarReference * vle;
		public VarnameContext varname;
		public Token INT;
		public VarnameContext varname() {
			return getRuleContext(VarnameContext.class,0);
		}
		public TerminalNode INT() { return getToken(MiniCParser.INT, 0); }
		public VarlistentryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varlistentry; }
	}

	public final VarlistentryContext varlistentry() throws RecognitionException {
		VarlistentryContext _localctx = new VarlistentryContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varlistentry);
		try {
			setState(184);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				((VarlistentryContext)_localctx).varname = varname();

				        ((VarlistentryContext)_localctx).vle =  new minicc::VarReference();
				        _localctx.vle->addChild(((VarlistentryContext)_localctx).varname.vn);
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(178);
				((VarlistentryContext)_localctx).varname = varname();
				setState(179);
				match(T__14);
				setState(180);
				((VarlistentryContext)_localctx).INT = match(INT);
				setState(181);
				match(T__15);

				        ((VarlistentryContext)_localctx).vle =  new minicc::VarReference();
				        _localctx.vle->addChild(((VarlistentryContext)_localctx).varname.vn);
				        _localctx.vle->addChild(minicc::ConstantLiteralExpr::fromString((((VarlistentryContext)_localctx).INT!=null?((VarlistentryContext)_localctx).INT.getText():null)));
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VartypeContext extends ParserRuleContext {
		public minicc::TypeReference * vt;
		public VartypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vartype; }
	}

	public final VartypeContext vartype() throws RecognitionException {
		VartypeContext _localctx = new VartypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_vartype);
		try {
			setState(190);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__16:
				enterOuterAlt(_localctx, 1);
				{
				setState(186);
				match(T__16);
				((VartypeContext)_localctx).vt =  new minicc::TypeReference(Type::Int);
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 2);
				{
				setState(188);
				match(T__17);
				((VartypeContext)_localctx).vt =  new minicc::TypeReference(Type::Bool);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RettypeContext extends ParserRuleContext {
		public minicc::TypeReference * rt;
		public VartypeContext vartype;
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public RettypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rettype; }
	}

	public final RettypeContext rettype() throws RecognitionException {
		RettypeContext _localctx = new RettypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_rettype);
		try {
			setState(197);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__18:
				enterOuterAlt(_localctx, 1);
				{
				setState(192);
				match(T__18);
				((RettypeContext)_localctx).rt =  new minicc::TypeReference(Type::Void);
				}
				break;
			case T__16:
			case T__17:
				enterOuterAlt(_localctx, 2);
				{
				setState(194);
				((RettypeContext)_localctx).vartype = vartype();
				((RettypeContext)_localctx).rt =  ((RettypeContext)_localctx).vartype.vt;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public std::vector<minicc::Parameter *> params;
		public ParameterlistContext parameterlist;
		public ParameterlistContext parameterlist() {
			return getRuleContext(ParameterlistContext.class,0);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_parameters);
		try {
			setState(203);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				std::vector<minicc::Parameter *> p; ((ParametersContext)_localctx).params =  p;
				}
				break;
			case T__16:
			case T__17:
				enterOuterAlt(_localctx, 2);
				{
				setState(200);
				((ParametersContext)_localctx).parameterlist = parameterlist(0);
				((ParametersContext)_localctx).params =  ((ParametersContext)_localctx).parameterlist.pl;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterlistContext extends ParserRuleContext {
		public std::vector<minicc::Parameter *> pl;
		public ParameterlistContext p1;
		public ParameterentryContext parameterentry;
		public ParameterentryContext parameterentry() {
			return getRuleContext(ParameterentryContext.class,0);
		}
		public ParameterlistContext parameterlist() {
			return getRuleContext(ParameterlistContext.class,0);
		}
		public ParameterlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterlist; }
	}

	public final ParameterlistContext parameterlist() throws RecognitionException {
		return parameterlist(0);
	}

	private ParameterlistContext parameterlist(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ParameterlistContext _localctx = new ParameterlistContext(_ctx, _parentState);
		ParameterlistContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, 22, RULE_parameterlist, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(206);
			((ParameterlistContext)_localctx).parameterentry = parameterentry();

			        std::vector<minicc::Parameter *> p;
			        p.push_back(((ParameterlistContext)_localctx).parameterentry.pe);
			        ((ParameterlistContext)_localctx).pl =  p;
			    
			}
			_ctx.stop = _input.LT(-1);
			setState(216);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ParameterlistContext(_parentctx, _parentState);
					_localctx.p1 = _prevctx;
					_localctx.p1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_parameterlist);
					setState(209);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(210);
					match(T__13);
					setState(211);
					((ParameterlistContext)_localctx).parameterentry = parameterentry();

					                  ((ParameterlistContext)_localctx).pl =  ((ParameterlistContext)_localctx).p1.pl;
					                  _localctx.pl.push_back(((ParameterlistContext)_localctx).parameterentry.pe);
					              
					}
					} 
				}
				setState(218);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ParameterentryContext extends ParserRuleContext {
		public minicc::Parameter * pe;
		public VartypeContext vartype;
		public ParameternameContext parametername;
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public ParameternameContext parametername() {
			return getRuleContext(ParameternameContext.class,0);
		}
		public ParameterentryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterentry; }
	}

	public final ParameterentryContext parameterentry() throws RecognitionException {
		ParameterentryContext _localctx = new ParameterentryContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_parameterentry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(219);
			((ParameterentryContext)_localctx).vartype = vartype();
			setState(220);
			((ParameterentryContext)_localctx).parametername = parametername();
